# miso-from-html

./: .gitignore  Main.hs  Makefile  README.md  cabal.project  flake.nix  miso-from-html.cabal
.github/workflows/: main.yml
app/: Main.hs
exe/: Main.hs
src/Miso/From/: Html.hs
static/: index.html  style.css
