cabal-version: 3.0
name:
  miso-from-html
version:
  0.3.0.0
synopsis:
  Convert HTML to miso View syntax
description:
  HTML parser that pretty prints to a Miso View
bug-reports:
  https://github.com/dmjio/miso-from-html/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  David Johnson
maintainer:
  code@dmj.io
copyright:
  (c) David Johnson 2025
category:
  Web
build-type:
  Simple
extra-source-files:
  README.md
  index.html

common wasm
  if arch(wasm32)
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
    cpp-options:
      -DWASM

library
  default-language:
    Haskell2010
  ghc-options:
    -Wall
  hs-source-dirs:
    src
  exposed-modules:
    Miso.From.Html
  build-depends:
    base < 5,
    bytestring,
    containers,
    html-parse,
    miso,
    mtl,
    pretty-simple,
    text

-- build w/ vanilla ghc
executable miso-from-html
  main-is:
    Main.hs
  hs-source-dirs:
    exe
  ghc-options:
    -Wall
  build-depends:
    base < 5,
    miso-from-html,
    text
  default-language:
    Haskell2010

-- Build w/ WASM / JS backends (or vanilla for hot-reload w/ jssaddle)
executable app
  import:
    wasm
  main-is:
    Main.hs
  ghc-options:
    -Wall
  hs-source-dirs:
    app
  build-depends:
    base < 5,
    jsaddle,
    miso,
    miso-from-html

  if !arch(wasm32)
    build-depends:
      file-embed

  default-language:
    Haskell2010

source-repository head
   type: git
   location: https://github.com/dmjio/miso-from-html.git
